fixes overflowing layouts

--- a/modules/components/src/AdvancedSqonBuilder/style.css
+++ b/modules/components/src/AdvancedSqonBuilder/style.css
@@ -31,6 +31,8 @@
   justify-content: left;
   align-items: center;
   width: 50px;
+  max-width: 50px;
+  min-width: 50px;
   padding: 2px;
   border-left: solid 1px lightgrey;
   border-right: solid 1px lightgrey;
@@ -59,11 +61,12 @@
   display: inline-block;
   padding: 5px;
   border-right: solid 1px lightgrey;
+  white-space: nowrap;
+  flex: 1;
 }
 .sqonView .fieldOp .valueDisplay {
   padding: 5px;
   max-width: 200px;
-
   display: inline-block;
   white-space: nowrap;
   text-overflow: ellipsis;
